@@ -10,15 +10,7 @@
 
 package com.yugabyte.yw.commissioner;
 
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.CLOCK_SYNC_CHECK;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.CUSTOM_NODE_METRICS_COLLECTION_METRIC;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.HEALTH_CHECK_METRICS;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.HEALTH_CHECK_METRICS_WITHOUT_STATUS;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.NODE_EXPORTER_CHECK;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.OPENED_FILE_DESCRIPTORS_CHECK;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.UPTIME_CHECK;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.getCountMetricByCheckName;
-import static com.yugabyte.yw.commissioner.HealthCheckMetrics.getNodeMetrics;
+import static com.yugabyte.yw.commissioner.HealthCheckMetrics.*;
 import static com.yugabyte.yw.common.metrics.MetricService.STATUS_OK;
 import static com.yugabyte.yw.common.metrics.MetricService.buildMetricTemplate;
 import static play.mvc.Http.Status.BAD_REQUEST;
@@ -26,21 +18,25 @@ import static play.mvc.Http.Status.BAD_REQUEST;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import com.typesafe.config.Config;
 import com.yugabyte.yw.commissioner.Common.CloudType;
-import com.yugabyte.yw.common.EmailHelper;
-import com.yugabyte.yw.common.NodeUniverseManager;
-import com.yugabyte.yw.common.PlatformExecutorFactory;
-import com.yugabyte.yw.common.PlatformScheduler;
-import com.yugabyte.yw.common.PlatformServiceException;
-import com.yugabyte.yw.common.ShellProcessContext;
-import com.yugabyte.yw.common.ShellResponse;
+import com.yugabyte.yw.commissioner.tasks.KubernetesTaskBase;
+import com.yugabyte.yw.commissioner.tasks.UniverseTaskBase;
+import com.yugabyte.yw.commissioner.tasks.subtasks.CheckClusterConsistency;
+import com.yugabyte.yw.common.*;
+import com.yugabyte.yw.common.alerts.MaintenanceService;
 import com.yugabyte.yw.common.alerts.SmtpData;
+import com.yugabyte.yw.common.config.GlobalConfKeys;
+import com.yugabyte.yw.common.config.RuntimeConfGetter;
 import com.yugabyte.yw.common.config.RuntimeConfigFactory;
+import com.yugabyte.yw.common.config.UniverseConfKeys;
+import com.yugabyte.yw.common.gflags.GFlagsUtil;
 import com.yugabyte.yw.common.metrics.MetricService;
+import com.yugabyte.yw.common.services.YBClientService;
 import com.yugabyte.yw.common.utils.Pair;
 import com.yugabyte.yw.forms.AlertingData;
 import com.yugabyte.yw.forms.UniverseDefinitionTaskParams;
@@ -53,13 +49,17 @@ import com.yugabyte.yw.models.HealthCheck.Details.NodeData;
 import com.yugabyte.yw.models.HighAvailabilityConfig;
 import com.yugabyte.yw.models.Metric;
 import com.yugabyte.yw.models.MetricSourceKey;
+import com.yugabyte.yw.models.NodeInstance;
 import com.yugabyte.yw.models.Provider;
 import com.yugabyte.yw.models.Universe;
+import com.yugabyte.yw.models.XClusterConfig;
+import com.yugabyte.yw.models.XClusterConfig.ConfigType;
 import com.yugabyte.yw.models.configs.CustomerConfig;
 import com.yugabyte.yw.models.filters.MetricFilter;
+import com.yugabyte.yw.models.helpers.CommonUtils;
 import com.yugabyte.yw.models.helpers.NodeDetails;
 import com.yugabyte.yw.models.helpers.PlatformMetrics;
-import com.yugabyte.yw.models.helpers.TaskType;
+import jakarta.mail.MessagingException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
@@ -67,6 +67,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Duration;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
@@ -76,6 +78,7 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -85,17 +88,16 @@ import java.util.concurrent.CompletionException;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.ThreadFactory;
+import java.util.function.Function;
 import java.util.stream.Collectors;
-import javax.mail.MessagingException;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.experimental.Accessors;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
-import play.Configuration;
 import play.Environment;
 import play.inject.ApplicationLifecycle;
 import play.libs.Json;
@@ -116,13 +118,12 @@ public class HealthChecker {
   private static final String MAX_NUM_THREADS_NODE_CHECK_KEY =
       "yb.health.max_num_parallel_node_checks";
 
-  private static final String K8S_NODE_YW_DATA_DIR = "/mnt/disk0/yw-data";
-
-  public static final String READ_WRITE_TEST_PARAM = "yb.metrics.db_read_write_test";
+  private static final String DDL_ATOMICITY_CHECK_RELEASE = "2.18.4.0-b23";
+  private static final String DDL_ATOMICITY_CHECK_PREVIEW_RELEASE = "2.19.1.0-b301";
 
   private final Environment environment;
 
-  private final play.Configuration config;
+  private final Config config;
 
   // Last time we sent a status update email per customer.
   private final Map<UUID, Long> lastStatusUpdateTimeMap = new HashMap<>();
@@ -140,6 +141,8 @@ public class HealthChecker {
 
   private final RuntimeConfigFactory runtimeConfigFactory;
 
+  private final RuntimeConfGetter confGetter;
+
   // The thread pool executor for parallelized health checks for multiple universes.
   private final ExecutorService universeExecutor;
   // The thread pool executor for parallelized node checks for multiple universes.
@@ -150,6 +153,7 @@ public class HealthChecker {
 
   // We upload health check script to the node only when NodeInfo is updates
   private final Map<Pair<UUID, String>, NodeInfo> uploadedNodeInfo = new ConcurrentHashMap<>();
+  private final Map<UUID, Instant> ddlAtomicitySuccessfulCheckTimestamp = new ConcurrentHashMap<>();
 
   private final Set<String> healthScriptMetrics =
       Collections.newSetFromMap(new ConcurrentHashMap<>());
@@ -158,18 +162,28 @@ public class HealthChecker {
 
   private final NodeUniverseManager nodeUniverseManager;
 
+  private final FileHelperService fileHelperService;
+
+  private final MaintenanceService maintenanceService;
+
+  private final ClusterConsistencyChecker clusterConsistencyChecker;
+
   @Inject
   public HealthChecker(
       Environment environment,
-      Configuration config,
+      Config config,
       PlatformExecutorFactory platformExecutorFactory,
       PlatformScheduler platformScheduler,
       HealthCheckerReport healthCheckerReport,
       EmailHelper emailHelper,
       MetricService metricService,
       RuntimeConfigFactory runtimeConfigFactory,
+      RuntimeConfGetter confGetter,
       ApplicationLifecycle lifecycle,
-      NodeUniverseManager nodeUniverseManager) {
+      NodeUniverseManager nodeUniverseManager,
+      FileHelperService fileHelperService,
+      MaintenanceService maintenanceService,
+      YBClientService ybClientService) {
     this(
         environment,
         config,
@@ -178,24 +192,34 @@ public class HealthChecker {
         emailHelper,
         metricService,
         runtimeConfigFactory,
+        confGetter,
         lifecycle,
         nodeUniverseManager,
         createUniverseExecutor(platformExecutorFactory, runtimeConfigFactory.globalRuntimeConf()),
-        createNodeExecutor(platformExecutorFactory, runtimeConfigFactory.globalRuntimeConf()));
+        createNodeExecutor(platformExecutorFactory, runtimeConfigFactory.globalRuntimeConf()),
+        createConsistencyCheckExecutor(platformExecutorFactory, confGetter),
+        fileHelperService,
+        maintenanceService,
+        ybClientService);
   }
 
   HealthChecker(
       Environment environment,
-      Configuration config,
+      Config config,
       PlatformScheduler platformScheduler,
       HealthCheckerReport healthCheckerReport,
       EmailHelper emailHelper,
       MetricService metricService,
       RuntimeConfigFactory runtimeConfigFactory,
+      RuntimeConfGetter confGetter,
       ApplicationLifecycle lifecycle,
       NodeUniverseManager nodeUniverseManager,
       ExecutorService universeExecutor,
-      ExecutorService nodeExecutor) {
+      ExecutorService nodeExecutor,
+      ExecutorService consistencyCheckExecutor,
+      FileHelperService fileHelperService,
+      MaintenanceService maintenanceService,
+      YBClientService ybClientService) {
     this.environment = environment;
     this.config = config;
     this.platformScheduler = platformScheduler;
@@ -203,10 +227,15 @@ public class HealthChecker {
     this.emailHelper = emailHelper;
     this.metricService = metricService;
     this.runtimeConfigFactory = runtimeConfigFactory;
+    this.confGetter = confGetter;
     this.lifecycle = lifecycle;
     this.universeExecutor = universeExecutor;
     this.nodeExecutor = nodeExecutor;
     this.nodeUniverseManager = nodeUniverseManager;
+    this.fileHelperService = fileHelperService;
+    this.maintenanceService = maintenanceService;
+    this.clusterConsistencyChecker =
+        new ClusterConsistencyChecker(consistencyCheckExecutor, confGetter, ybClientService);
   }
 
   public void initialize() {
@@ -216,27 +245,29 @@ public class HealthChecker {
         Duration.ZERO /* initialDelay */,
         Duration.ofMillis(healthCheckIntervalMs()) /* interval */,
         this::scheduleRunner);
+    platformScheduler.schedule(
+        clusterConsistencyChecker.getClass().getSimpleName(),
+        Duration.ZERO /* initialDelay */,
+        Duration.ofMillis(healthCheckIntervalMs()) /* interval */,
+        clusterConsistencyChecker::processAll);
   }
 
   // The interval at which the checker will run.
   // Can be overridden per customer.
   private long healthCheckIntervalMs() {
-    Long interval = config.getLong("yb.health.check_interval_ms");
-    return interval == null ? 0 : interval;
+    return config.getLong("yb.health.check_interval_ms");
   }
 
   // The interval at which check result will be stored to DB
   // Can be overridden per customer.
   private long healthCheckStoreIntervalMs() {
-    Long interval = config.getLong("yb.health.store_interval_ms");
-    return interval == null ? 0 : interval;
+    return config.getLong("yb.health.store_interval_ms");
   }
 
   // The interval at which to send a status update of all the current universes.
   // Can be overridden per customer.
   private long statusUpdateIntervalMs() {
-    Long interval = config.getLong("yb.health.status_interval_ms");
-    return interval == null ? 0 : interval;
+    return config.getLong("yb.health.status_interval_ms");
   }
 
   /**
@@ -273,7 +304,8 @@ public class HealthChecker {
         }
         // Add node metric value if it's present in data node
         List<Details.Metric> nodeMetrics = nodeData.getMetrics();
-        List<Metric> nodeCustomMetrics = new ArrayList<>(getNodeMetrics(c, u, node, nodeMetrics));
+        List<Metric> nodeCustomMetrics =
+            new ArrayList<>(getNodeMetrics(c, u, nodeData, nodeMetrics));
         if (checkName.equals(UPTIME_CHECK)) {
           // No boot time metric means the instance or the whole node is down
           // and this node shouldn't be counted in other error node count metrics.
@@ -281,8 +313,7 @@ public class HealthChecker {
         }
         if (checkName.equals(NODE_EXPORTER_CHECK)) {
           shouldCollectNodeMetrics =
-              nodeCustomMetrics
-                  .stream()
+              nodeCustomMetrics.stream()
                   .noneMatch(
                       metric ->
                           metric.getName().equals(CUSTOM_NODE_METRICS_COLLECTION_METRIC)
@@ -306,7 +337,13 @@ public class HealthChecker {
         }
         if (shouldCollectNodeMetrics
             || checkName.equals(OPENED_FILE_DESCRIPTORS_CHECK)
-            || checkName.equals(CLOCK_SYNC_CHECK)) {
+            || checkName.equals(UNEXPECTED_PROCESSES_CHECK)
+            || checkName.equals(CLOCK_SYNC_CHECK)
+            || checkName.equals(DDL_ATOMICITY_CHECK)) {
+          if (checkName.equals(DDL_ATOMICITY_CHECK) && !checkResult) {
+            ddlAtomicitySuccessfulCheckTimestamp.put(
+                u.getUniverseUUID(), report.getTimestampIso().toInstant());
+          }
           // Used FD count metric is always collected through health check as it's not
           // calculated properly from inside the collect_metrics service - it gets service limit
           // instead of user limit for file descriptors
@@ -319,13 +356,14 @@ public class HealthChecker {
       }
 
       healthScriptMetrics.addAll(
-          metrics.stream().map(Metric::getName).collect(Collectors.toList()));
+          metrics.stream()
+              .map(Metric::getName)
+              .filter(n -> !SKIP_CLEANUP_METRICS.contains(n))
+              .toList());
       metrics.addAll(
-          platformMetrics
-              .entrySet()
-              .stream()
+          platformMetrics.entrySet().stream()
               .map(e -> buildMetricTemplate(e.getKey(), u).setValue(e.getValue().doubleValue()))
-              .collect(Collectors.toList()));
+              .toList());
       // Clean all health check metrics for universe before saving current values
       // just in case list of nodes changed between runs.
       MetricFilter toClean =
@@ -352,12 +390,13 @@ public class HealthChecker {
       boolean sendMailAlways,
       boolean reportOnlyErrors,
       Details report) {
-    SmtpData smtpData = emailHelper.getSmtpData(c.uuid);
+    SmtpData smtpData = emailHelper.getSmtpData(c.getUuid());
     if (!StringUtils.isEmpty(emailDestinations)
         && (smtpData != null)
         && (sendMailAlways || report.getHasError())) {
       String subject =
-          String.format("%s - <%s> %s", report.getHasError() ? "ERROR" : "OK", c.getTag(), u.name);
+          String.format(
+              "%s - <%s> %s", report.getHasError() ? "ERROR" : "OK", c.getTag(), u.getName());
 
       // LinkedHashMap saves values order.
       JsonNode reportJson = Json.toJson(report);
@@ -393,7 +432,7 @@ public class HealthChecker {
         try {
           checkCustomer(c);
         } catch (Exception ex) {
-          log.error("Error running health check scheduler for customer " + c.uuid, ex);
+          log.error("Error running health check scheduler for customer " + c.getUuid(), ex);
         }
       }
     } catch (Exception e) {
@@ -403,14 +442,14 @@ public class HealthChecker {
 
   public void checkCustomer(Customer c) {
     // We need an alerting config to do work.
-    CustomerConfig config = CustomerConfig.getAlertConfig(c.uuid);
+    CustomerConfig config = CustomerConfig.getAlertConfig(c.getUuid());
 
     boolean shouldSendStatusUpdate = false;
     long storeIntervalMs = healthCheckStoreIntervalMs();
     AlertingData alertingData = null;
     long now = (new Date()).getTime();
-    if (config != null && config.data != null) {
-      alertingData = Json.fromJson(config.data, AlertingData.class);
+    if (config != null && config.getData() != null) {
+      alertingData = Json.fromJson(config.getData(), AlertingData.class);
       if (alertingData.checkIntervalMs > 0) {
         storeIntervalMs = alertingData.checkIntervalMs;
       }
@@ -420,23 +459,23 @@ public class HealthChecker {
               ? statusUpdateIntervalMs()
               : alertingData.statusUpdateIntervalMs;
       shouldSendStatusUpdate =
-          (now - statusUpdateIntervalMs) > lastStatusUpdateTimeMap.getOrDefault(c.uuid, 0L);
+          (now - statusUpdateIntervalMs) > lastStatusUpdateTimeMap.getOrDefault(c.getUuid(), 0L);
       if (shouldSendStatusUpdate) {
-        lastStatusUpdateTimeMap.put(c.uuid, now);
+        lastStatusUpdateTimeMap.put(c.getUuid(), now);
       }
     }
     boolean onlyMetrics =
         !shouldSendStatusUpdate
-            && ((now - storeIntervalMs) < lastCheckTimeMap.getOrDefault(c.uuid, 0L));
+            && ((now - storeIntervalMs) < lastCheckTimeMap.getOrDefault(c.getUuid(), 0L));
 
     if (!onlyMetrics) {
-      lastCheckTimeMap.put(c.uuid, now);
+      lastCheckTimeMap.put(c.getUuid(), now);
     }
     checkAllUniverses(c, alertingData, shouldSendStatusUpdate, onlyMetrics);
   }
 
   public CompletableFuture<Void> checkSingleUniverse(Customer c, Universe u) {
-    if (!runtimeConfigFactory.forUniverse(u).getBoolean("yb.health.trigger_api.enabled")) {
+    if (!confGetter.getConfForScope(u, UniverseConfKeys.enableTriggerAPI)) {
       throw new PlatformServiceException(BAD_REQUEST, "Manual health check is disabled.");
     }
     // We hardcode the parameters here as this is currently a cloud-only feature
@@ -479,8 +518,7 @@ public class HealthChecker {
     boolean reportOnlyErrors =
         !shouldSendStatusUpdate && alertingData != null && alertingData.reportOnlyErrors;
 
-    c.getUniverses()
-        .stream()
+    c.getUniverses().stream()
         .map(
             u -> {
               String destinations = getAlertDestinations(u, c);
@@ -501,11 +539,9 @@ public class HealthChecker {
 
   public void markUniverseForReUpload(UUID universeUUID) {
     List<Pair<UUID, String>> universeNodeInfos =
-        uploadedNodeInfo
-            .keySet()
-            .stream()
+        uploadedNodeInfo.keySet().stream()
             .filter(key -> key.getFirst().equals(universeUUID))
-            .collect(Collectors.toList());
+            .toList();
     universeNodeInfos.forEach(uploadedNodeInfo::remove);
   }
 
@@ -513,11 +549,9 @@ public class HealthChecker {
     cancelHealthCheck(universeUUID);
     runningHealthChecks.remove(universeUUID);
     List<Pair<UUID, String>> universeNodeInfos =
-        uploadedNodeInfo
-            .keySet()
-            .stream()
+        uploadedNodeInfo.keySet().stream()
             .filter(key -> key.getFirst().equals(universeUUID))
-            .collect(Collectors.toList());
+            .toList();
     universeNodeInfos.forEach(uploadedNodeInfo::remove);
   }
 
@@ -551,10 +585,26 @@ public class HealthChecker {
         "Health-Check-Node-Pool", numParallelism, namedThreadFactory);
   }
 
+  private static ExecutorService createConsistencyCheckExecutor(
+      PlatformExecutorFactory executorFactory, RuntimeConfGetter confGetter) {
+    int numParallelism =
+        confGetter.getGlobalConf(GlobalConfKeys.clusterConsistencyCheckParallelism);
+
+    // Initialize the health check thread pool.
+    ThreadFactory namedThreadFactory =
+        new ThreadFactoryBuilder()
+            .setNameFormat("Health-Check-Cluster-Consistency-Pool-%d")
+            .build();
+
+    return executorFactory.createFixedExecutor(
+        "Health-Check-Cluster-Consistency-Pool", numParallelism, namedThreadFactory);
+  }
+
   public CompletableFuture<Void> runHealthCheck(
       CheckSingleUniverseParams params, Boolean ignoreLastCheck) {
-    String universeName = params.universe.name;
-    CompletableFuture<Void> lastCheck = this.runningHealthChecks.get(params.universe.universeUUID);
+    String universeName = params.universe.getName();
+    CompletableFuture<Void> lastCheck =
+        this.runningHealthChecks.get(params.universe.getUniverseUUID());
     // Only schedule a task if the previous one for the given universe has completed.
     if (!ignoreLastCheck && lastCheck != null && !lastCheck.isDone()) {
       log.info("Health check for universe {} is still running. Skipping...", universeName);
@@ -586,51 +636,46 @@ public class HealthChecker {
             this.universeExecutor);
 
     // Add the task to the map of running tasks.
-    this.runningHealthChecks.put(params.universe.universeUUID, task);
+    this.runningHealthChecks.put(params.universe.getUniverseUUID(), task);
 
     return task;
   }
 
   private String getAlertDestinations(Universe u, Customer c) {
-    List<String> destinations = emailHelper.getDestinations(c.uuid);
-    if (destinations.size() == 0) {
+    List<String> destinations = emailHelper.getDestinations(c.getUuid());
+    if (destinations.isEmpty()) {
       return null;
     }
 
-    String disabledUntilStr = u.getConfig().getOrDefault(Universe.DISABLE_ALERTS_UNTIL, "0");
-    long disabledUntilSecs = 0;
-    try {
-      disabledUntilSecs = Long.parseLong(disabledUntilStr);
-    } catch (NumberFormatException ne) {
-      log.warn("invalid universe config for disabled alerts: [ " + disabledUntilStr + " ]");
-    }
+    // Earlier we used to use "Universe.DISABLE_ALERTS_UNTIL" to check whether or not to silence
+    // health check notifications via the "configureUniverseAlerts" API.
+    // But now we unsnoozed all those notifications and instead recommend to use the maintenance
+    // window APIs to manage health check notifications along with normal alerts.
 
-    boolean silenceEmails = ((System.currentTimeMillis() / 1000) <= disabledUntilSecs);
-    return silenceEmails ? null : String.join(",", destinations);
-  }
+    // Check if there is an active maintenance window for this universe which is supposed to
+    // suppress health check alerts.
+    boolean maintenanceWindowActiveForUniverse =
+        maintenanceService.isHealthCheckNotificationSuppressedForUniverse(u);
 
-  private static boolean isUniverseBusyByTask(UniverseDefinitionTaskParams details) {
-    return details.updateInProgress
-        && details.updatingTask != TaskType.BackupTable
-        && details.updatingTask != TaskType.MultiTableBackup
-        && details.updatingTask != TaskType.CreateBackup
-        && details.updatingTask != TaskType.RestoreBackup;
+    return (maintenanceWindowActiveForUniverse) ? null : String.join(",", destinations);
   }
 
   public void checkSingleUniverse(CheckSingleUniverseParams params) {
     // Validate universe data and make sure nothing is in progress.
     UniverseDefinitionTaskParams details = params.universe.getUniverseDetails();
     if (details == null) {
-      log.warn("Skipping universe " + params.universe.name + " due to invalid details json...");
+      log.warn(
+          "Skipping universe " + params.universe.getName() + " due to invalid details json...");
       setHealthCheckFailedMetric(params.customer, params.universe);
       return;
     }
     if (details.universePaused) {
-      log.warn("Skipping universe " + params.universe.name + " as it is in the paused state...");
+      log.warn(
+          "Skipping universe " + params.universe.getName() + " as it is in the paused state...");
       return;
     }
-    if (isUniverseBusyByTask(details)) {
-      log.warn("Skipping universe " + params.universe.name + " due to task in progress...");
+    if (details.isUniverseBusyByTask()) {
+      log.warn("Skipping universe " + params.universe.getName() + " due to task in progress...");
       return;
     }
     Date startTime = new Date();
@@ -638,57 +683,72 @@ public class HealthChecker {
     String providerCode;
     int masterIndex = 0;
     int tserverIndex = 0;
-    CustomerTask lastTask = CustomerTask.getLatestByUniverseUuid(params.universe.universeUUID);
+    CustomerTask lastTask = CustomerTask.getLastTaskByTargetUuid(params.universe.getUniverseUUID());
     Long potentialStartTime = null;
     if (lastTask != null && lastTask.getCompletionTime() != null) {
       potentialStartTime = lastTask.getCompletionTime().getTime();
     }
+    boolean isUniverseTxnXClusterTarget =
+        XClusterConfig.getByTargetUniverseUUID(params.universe.getUniverseUUID()).stream()
+            .anyMatch(x -> (x.getType() == ConfigType.Txn));
     boolean testReadWrite =
-        runtimeConfigFactory
-            .forUniverse(params.universe)
-            .getBoolean(HealthChecker.READ_WRITE_TEST_PARAM);
+        confGetter.getConfForScope(params.universe, UniverseConfKeys.dbReadWriteTest)
+            && !isUniverseTxnXClusterTarget;
+    boolean testYsqlshConnectivity =
+        confGetter.getConfForScope(params.universe, UniverseConfKeys.ysqlshConnectivityTest);
+    boolean testCqlshConnectivity =
+        confGetter.getConfForScope(params.universe, UniverseConfKeys.cqlshConnectivityTest);
     for (UniverseDefinitionTaskParams.Cluster cluster : details.clusters) {
       UserIntent userIntent = cluster.userIntent;
       Provider provider = Provider.get(UUID.fromString(userIntent.provider));
       if (provider == null) {
         log.warn(
             "Skipping universe "
-                + params.universe.name
+                + params.universe.getName()
                 + " due to invalid provider "
                 + cluster.userIntent.provider);
         setHealthCheckFailedMetric(params.customer, params.universe);
 
         return;
       }
-      providerCode = provider.code;
+      providerCode = provider.getCode();
       List<NodeDetails> activeNodes =
-          details
-              .getNodesInCluster(cluster.uuid)
-              .stream()
-              .filter(NodeDetails::isActive)
-              .collect(Collectors.toList());
+          details.getNodesInCluster(cluster.uuid).stream().filter(NodeDetails::isActive).toList();
       for (NodeDetails nd : activeNodes) {
         if (nd.cloudInfo.private_ip == null) {
           log.warn(
               String.format(
                   "Universe %s has active unprovisioned node %s.",
-                  params.universe.name, nd.nodeName));
+                  params.universe.getName(), nd.nodeName));
           setHealthCheckFailedMetric(params.customer, params.universe);
           return;
         }
       }
       List<NodeDetails> sortedDetails =
-          activeNodes
-              .stream()
-              .sorted(Comparator.comparing(NodeDetails::getNodeName))
-              .collect(Collectors.toList());
+          activeNodes.stream().sorted(Comparator.comparing(NodeDetails::getNodeName)).toList();
+      Set<UUID> nodeUuids =
+          sortedDetails.stream()
+              .map(NodeDetails::getNodeUuid)
+              .filter(Objects::nonNull)
+              .collect(Collectors.toSet());
+      Map<UUID, NodeInstance> nodeInstanceMap =
+          NodeInstance.listByUuids(nodeUuids).stream()
+              .collect(Collectors.toMap(NodeInstance::getNodeUuid, Function.identity()));
       for (NodeDetails nodeDetails : sortedDetails) {
+        NodeInstance nodeInstance = nodeInstanceMap.get(nodeDetails.getNodeUuid());
+        String nodeIdentifier = StringUtils.EMPTY;
+        if (nodeInstance != null && nodeInstance.getDetails().instanceName != null) {
+          nodeIdentifier = nodeInstance.getDetails().instanceName;
+        }
         NodeInfo nodeInfo =
             new NodeInfo()
                 .setNodeHost(nodeDetails.cloudInfo.private_ip)
                 .setNodeName(nodeDetails.nodeName)
+                .setNodeUuid(nodeDetails.nodeUuid)
+                .setNodeIdentifier(nodeIdentifier)
                 .setYbSoftwareVersion(userIntent.ybSoftwareVersion)
                 .setEnableYSQL(userIntent.enableYSQL)
+                .setEnableConnectionPooling(userIntent.enableConnectionPooling)
                 .setEnableYCQL(userIntent.enableYCQL)
                 .setEnableYEDIS(userIntent.enableYEDIS)
                 .setEnableTls(userIntent.enableNodeToNodeEncrypt)
@@ -698,23 +758,37 @@ public class HealthChecker {
                 .setYbHomeDir(provider.getYbHome())
                 .setNodeStartTime(potentialStartTime)
                 .setTestReadWrite(testReadWrite)
+                .setTestYsqlshConnectivity(testYsqlshConnectivity)
+                .setTestCqlshConnectivity(testCqlshConnectivity)
                 .setUniverseUuid(params.universe.getUniverseUUID())
                 .setNodeDetails(nodeDetails);
         if (nodeDetails.isMaster) {
-          nodeInfo.setMasterIndex(masterIndex++).setMasterHttpPort(nodeDetails.masterHttpPort);
+          nodeInfo
+              .setMasterIndex(masterIndex++)
+              .setMasterHttpPort(nodeDetails.masterHttpPort)
+              .setMasterRpcPort(nodeDetails.masterRpcPort);
         }
         if (nodeDetails.isTserver) {
-          nodeInfo.setTserverIndex(tserverIndex++).setTserverHttpPort(nodeDetails.tserverHttpPort);
+          nodeInfo
+              .setTserverIndex(tserverIndex++)
+              .setTserverHttpPort(nodeDetails.tserverHttpPort)
+              .setTserverRpcPort(nodeDetails.tserverRpcPort);
         }
         if (providerCode.equals(Common.CloudType.kubernetes.toString())) {
           nodeInfo.setK8s(true);
         }
-        if (userIntent.tserverGFlags.containsKey("ssl_protocols")) {
-          nodeInfo.setSslProtocol(cluster.userIntent.tserverGFlags.get("ssl_protocols"));
+        Map<String, String> tserverGflags =
+            GFlagsUtil.getGFlagsForNode(
+                nodeDetails, UniverseTaskBase.ServerType.TSERVER, cluster, details.clusters);
+        if (tserverGflags.containsKey("ssl_protocols")) {
+          nodeInfo.setSslProtocol(tserverGflags.get("ssl_protocols"));
         }
         if (nodeInfo.enableYSQL && nodeDetails.isYsqlServer) {
           nodeInfo.setYsqlPort(nodeDetails.ysqlServerRpcPort);
           nodeInfo.setYsqlServerHttpPort(nodeDetails.ysqlServerHttpPort);
+          if (nodeInfo.enableConnectionPooling) {
+            nodeInfo.setInternalYsqlPort(nodeDetails.internalYsqlServerRpcPort);
+          }
         }
         if (nodeInfo.enableYCQL && nodeDetails.isYqlServer) {
           nodeInfo.setYcqlPort(nodeDetails.yqlServerRpcPort);
@@ -722,16 +796,41 @@ public class HealthChecker {
         if (nodeInfo.enableYEDIS && nodeDetails.isRedisServer) {
           nodeInfo.setRedisPort(nodeDetails.redisServerRpcPort);
         }
-        if (!provider.code.equals(CloudType.onprem.toString())
-            && !provider.code.equals(CloudType.kubernetes.toString())) {
+
+        // Skip clock check for k8s.
+        if (!provider.getCode().equals(CloudType.kubernetes.toString())) {
           nodeInfo.setCheckClock(true);
+        }
+        // Clock drift config values. Clock drift health checks are only run for non-k8s universes
+        // and if they are enabled.
+        if (!provider.getCode().equals(CloudType.kubernetes.toString())
+            && confGetter.getConfForScope(params.universe, UniverseConfKeys.healthCheckTimeDrift)) {
+          nodeInfo.setCheckTimeDrift(true);
+          nodeInfo.setTimeDriftWrnThreshold(
+              confGetter.getConfForScope(
+                  params.universe, UniverseConfKeys.healthCheckTimeDriftWrnThreshold));
+          nodeInfo.setTimeDriftErrThreshold(
+              confGetter.getConfForScope(
+                  params.universe, UniverseConfKeys.healthCheckTimeDriftErrThreshold));
+          nodeInfo.setClockSyncServiceRequired(
+              confGetter.getConfForScope(
+                  params.universe, UniverseConfKeys.healthCheckClockSyncServiceRequired));
+        } else {
+          nodeInfo.setClockSyncServiceRequired(false);
         }
         if (params.universe.isYbcEnabled()) {
           nodeInfo
               .setEnableYbc(true)
               .setYbcPort(
-                  params.universe.getUniverseDetails().communicationPorts.ybControllerrRpcPort);
+                  params.universe.getUniverseDetails().communicationPorts.ybControllerrRpcPort)
+              .setYbcDir(
+                  nodeInfo.isK8s()
+                      ? String.format(
+                          CommonUtils.DEFAULT_YBC_DIR,
+                          GFlagsUtil.getCustomTmpDirectory(nodeDetails, params.universe))
+                      : nodeInfo.getYbHomeDir());
         }
+        nodeInfo.setOtelCollectorEnabled(params.universe.getUniverseDetails().otelCollectorEnabled);
         nodeMetadata.add(nodeInfo);
       }
     }
@@ -739,20 +838,21 @@ public class HealthChecker {
     // If last check had errors, set the flag to send an email. If this check will have an error,
     // we would send an email anyway, but if this check shows a healthy universe, let's send an
     // email about it.
-    HealthCheck lastCheck = HealthCheck.getLatest(params.universe.universeUUID);
+    HealthCheck lastCheck = HealthCheck.getLatest(params.universe.getUniverseUUID());
     boolean lastCheckHadErrors = lastCheck != null && lastCheck.hasError();
 
     // Exit without calling script if the universe is in the "updating" state.
     // Doing the check before the Python script is executed.
-    if (!canHealthCheckUniverse(params.universe.universeUUID) || isShutdown()) {
+    if (!canHealthCheckUniverse(params.universe.getUniverseUUID()) || isShutdown()) {
       return;
     }
 
-    List<NodeData> nodeReports = checkNodes(params.universe, nodeMetadata);
+    List<NodeData> nodeReports = checkNodes(params, nodeMetadata);
+    addUnexpectedServersChecks(nodeReports, nodeMetadata, params);
 
     Details fullReport =
         new Details()
-            .setTimestamp(startTime)
+            .setTimestampIso(startTime)
             .setYbVersion(details.getPrimaryCluster().userIntent.ybSoftwareVersion)
             .setData(nodeReports)
             .setHasError(nodeReports.stream().anyMatch(NodeData::getHasError))
@@ -762,7 +862,7 @@ public class HealthChecker {
     // Checking the interruption necessity after the Python script finished.
     // It is not needed to analyze results if the universe has the "update in
     // progress" state.
-    if (!canHealthCheckUniverse(params.universe.universeUUID) || isShutdown()) {
+    if (!canHealthCheckUniverse(params.universe.getUniverseUUID()) || isShutdown()) {
       return;
     }
 
@@ -773,21 +873,16 @@ public class HealthChecker {
 
     log.info(
         "Health check for universe {} reported {}. [ {} ms ]",
-        params.universe.name,
+        params.universe.getName(),
         (healthCheckReport.getHasError() ? "errors" : "success"),
         durationMs);
     if (healthCheckReport.getHasError()) {
       List<NodeData> failedChecks =
-          healthCheckReport
-              .getData()
-              .stream()
-              .filter(NodeData::getHasError)
-              .collect(Collectors.toList());
+          healthCheckReport.getData().stream().filter(NodeData::getHasError).toList();
       log.warn(
           "Following checks failed for universe {}:\n{}",
-          params.universe.name,
-          failedChecks
-              .stream()
+          params.universe.getName(),
+          failedChecks.stream()
               .map(NodeData::toHumanReadableString)
               .collect(Collectors.joining("\n")));
     }
@@ -805,27 +900,159 @@ public class HealthChecker {
       }
 
       HealthCheck.addAndPrune(
-          params.universe.universeUUID, params.universe.customerId, healthCheckReport);
+          params.universe.getUniverseUUID(), params.universe.getCustomerId(), healthCheckReport);
     }
 
     metricService.setOkStatusMetric(
         buildMetricTemplate(PlatformMetrics.HEALTH_CHECK_STATUS, params.universe));
   }
 
-  private List<NodeData> checkNodes(Universe universe, List<NodeInfo> nodes) {
-    // Check if it should log the output of the command.
-    boolean shouldLogOutput =
-        runtimeConfigFactory.forUniverse(universe).getBoolean("yb.health.logOutput");
-    int nodeCheckTimeoutSec =
-        runtimeConfigFactory.forUniverse(universe).getInt("yb.health.nodeCheckTimeoutSec");
+  private void addUnexpectedServersChecks(
+      List<NodeData> nodeReports, List<NodeInfo> nodeMetadata, CheckSingleUniverseParams params) {
+    Set<String> checkedNodeIps =
+        nodeMetadata.stream().map(n -> n.nodeHost).collect(Collectors.toSet());
+    CheckClusterConsistency.CheckResult checkResult =
+        clusterConsistencyChecker.getUniverseCheckResult(params.universe.getUniverseUUID());
+    log.debug("Found check result: {}", checkResult);
+    if (checkResult != null) {
+      if (checkResult.getCheckTimestamp() + healthCheckIntervalMs() * 2
+          < System.currentTimeMillis()) {
+        log.error(
+            "Consistency check is too old ({}), ignoring",
+            new Date(checkResult.getCheckTimestamp()));
+        return;
+      }
+      for (String ip :
+          Sets.union(checkResult.getUnknownMasterIps(), checkResult.getUnknownTserverIps())) {
+        NodeDetails nodeDetails = params.universe.getNodeByAnyIP(ip);
+        if (nodeDetails != null && checkedNodeIps.contains(nodeDetails.cloudInfo.private_ip)) {
+          continue;
+        }
+        log.debug("Found ip with master/tserver running: {} node {}", ip, nodeDetails);
+        Optional<NodeInstance> nodeInstance = NodeInstance.maybeGet(nodeDetails.getNodeUuid());
+        NodeData nodeData =
+            new NodeData()
+                .setHasError(true)
+                .setHasWarning(false)
+                .setMetricsOnly(false)
+                .setMessage(UNEXPECTED_PROCESSES_CHECK)
+                .setNode(nodeDetails != null ? nodeDetails.cloudInfo.private_ip : ip);
+        if (nodeDetails != null) {
+          nodeData.setNodeName(nodeDetails.getNodeName());
+          List<NodeInstance> nodeInstances =
+              NodeInstance.listByUuids(Collections.singletonList(nodeDetails.azUuid));
+          if (nodeInstances.size() > 0) {
+            nodeData.setNodeIdentifier(nodeInstances.get(0).getDetails().instanceName);
+          } else {
+            nodeData.setNodeIdentifier(StringUtils.EMPTY);
+          }
+        } else {
+          nodeData.setNodeName(ip);
+        }
+        List<String> details = new ArrayList<>();
+        List<Details.Metric> metrics = new ArrayList<>();
+        if (checkResult.getUnknownTserverIps().contains(ip)) {
+          metrics.add(unexpectedProcessRunning(false, params.universe));
+          details.add("Tserver heartbeating to master");
+        }
+        if (checkResult.getUnknownMasterIps().contains(ip)) {
+          metrics.add(unexpectedProcessRunning(true, params.universe));
+          details.add("Master in raft group");
+        }
+        nodeData.setMetrics(metrics);
+        nodeData.setDetails(details);
+        nodeReports.add(nodeData);
+      }
+    }
+  }
 
+  private Details.Metric unexpectedProcessRunning(boolean master, Universe universe) {
+    String processName = master ? "Master" : "Tserver";
+    return new Details.Metric()
+        .setName(String.format("yb_node_unexpected_%s_running", processName.toLowerCase()))
+        .setHelp(String.format("%s is running on node (but should not)", processName))
+        .setValues(
+            Collections.singletonList(
+                new Details.MetricValue()
+                    .setValue(1d)
+                    .setLabels(
+                        Collections.singletonList(
+                            new Details.MetricLabel()
+                                .setName("universe_uuid")
+                                .setValue(universe.getUniverseUUID().toString())))));
+  }
+
+  private List<NodeData> checkNodes(CheckSingleUniverseParams params, List<NodeInfo> nodes) {
+    // Check if it should log the output of the command.
+    Universe universe = params.universe;
+    boolean shouldLogOutput =
+        confGetter.getConfForScope(universe, UniverseConfKeys.healthLogOutput);
+    int nodeCheckTimeoutSec =
+        confGetter.getConfForScope(universe, UniverseConfKeys.nodeCheckTimeoutSec);
+
+    boolean ddlAtomicityCheckEnabled =
+        confGetter.getConfForScope(universe, UniverseConfKeys.ddlAtomicityCheckEnabled);
+    String nodeToRunDdlAtomicityCheck = null;
+    String masterLeaderUrl = null;
+
+    if (ddlAtomicityCheckEnabled) {
+      int ddlAtomicityIntervalSec =
+          confGetter.getConfForScope(universe, UniverseConfKeys.ddlAtomicityIntervalSec);
+
+      Instant lastDdlAtomicitySuccessfulCheckTimestamp =
+          ddlAtomicitySuccessfulCheckTimestamp.get(universe.getUniverseUUID());
+      String ybDbRelease =
+          universe.getUniverseDetails().getPrimaryCluster().userIntent.ybSoftwareVersion;
+      boolean ddlAtomicityCheckSupported =
+          CommonUtils.isReleaseBetween(DDL_ATOMICITY_CHECK_RELEASE, "2.19.0.0-b0", ybDbRelease)
+              || CommonUtils.isReleaseEqualOrAfter(
+                  DDL_ATOMICITY_CHECK_PREVIEW_RELEASE, ybDbRelease);
+      if (ddlAtomicityCheckSupported
+          && !params.onlyMetrics
+          && (lastDdlAtomicitySuccessfulCheckTimestamp == null
+              || lastDdlAtomicitySuccessfulCheckTimestamp
+                  .plus(ddlAtomicityIntervalSec, ChronoUnit.SECONDS)
+                  .isBefore(Instant.now()))) {
+        // We should schedule DDL atomicity check.
+        NodeDetails masterLeader = universe.getMasterLeaderNode();
+        if (masterLeader != null) {
+          NodeDetails nodeToRun = CommonUtils.getServerToRunYsqlQuery(universe);
+          boolean isK8s =
+              nodes.stream()
+                  .filter(ni -> ni.getNodeName().equals(masterLeader.getNodeName()))
+                  .map(NodeInfo::isK8s)
+                  .findFirst()
+                  .orElse(false);
+          // For now we don't enable HTTPS for K8S DB nodes.
+          // Fix that once we start doing that.
+          boolean httpsEnabledUI =
+              !isK8s
+                  && universe
+                      .getConfig()
+                      .getOrDefault(Universe.HTTPS_ENABLED_UI, "false")
+                      .equals("true");
+          masterLeaderUrl =
+              (httpsEnabledUI ? "https" : "http")
+                  + "://"
+                  + masterLeader.cloudInfo.private_ip
+                  + ":"
+                  + masterLeader.masterHttpPort;
+          nodeToRunDdlAtomicityCheck = nodeToRun.getNodeName();
+        }
+      }
+    }
     Map<String, CompletableFuture<Details>> nodeChecks = new HashMap<>();
     for (NodeInfo nodeInfo : nodes) {
+      NodeCheckContext context =
+          new NodeCheckContext().setLogOutput(shouldLogOutput).setTimeoutSec(nodeCheckTimeoutSec);
+      if (nodeInfo.getNodeName().equals(nodeToRunDdlAtomicityCheck)) {
+        context.setDdlAtomicityCheck(true);
+        context.setMasterLeaderUrl(masterLeaderUrl);
+      }
       nodeChecks.put(
           nodeInfo.getNodeName(),
           CompletableFuture.supplyAsync(
-              () -> checkNode(universe, nodeInfo, shouldLogOutput, nodeCheckTimeoutSec),
-              nodeExecutor));
+              () -> checkNode(universe, nodeInfo, context), nodeExecutor));
     }
 
     List<NodeData> result = new ArrayList<>();
@@ -835,8 +1062,9 @@ public class HealthChecker {
           new NodeData()
               .setNode(nodeInfo.nodeHost)
               .setNodeName(nodeInfo.nodeName)
+              .setNodeIdentifier(nodeInfo.nodeIdentifier)
               .setMessage("Node")
-              .setTimestamp(new Date());
+              .setTimestampIso(new Date());
       try {
         CompletableFuture<Details> future = nodeChecks.get(nodeInfo.getNodeName());
         result.addAll(future.get().getData());
@@ -874,53 +1102,61 @@ public class HealthChecker {
   }
 
   private Details checkNode(
-      Universe universe, NodeInfo nodeInfo, boolean logOutput, int timeoutSec) {
-    Pair<UUID, String> nodeKey = new Pair<>(universe.universeUUID, nodeInfo.getNodeName());
+      Universe universe, NodeInfo nodeInfo, NodeCheckContext nodeCheckContext) {
+    Pair<UUID, String> nodeKey = new Pair<>(universe.getUniverseUUID(), nodeInfo.getNodeName());
     NodeInfo uploadedInfo = uploadedNodeInfo.get(nodeKey);
     ShellProcessContext context =
         ShellProcessContext.builder()
-            .logCmdOutput(logOutput)
+            .logCmdOutput(nodeCheckContext.isLogOutput())
             .traceLogging(true)
-            .timeoutSecs(timeoutSec)
+            .timeoutSecs(nodeCheckContext.getTimeoutSec())
             .build();
     if (uploadedInfo == null && !nodeInfo.isK8s()) {
       // Only upload it once for new node, as it only depends on yb home dir.
       // Also skip upload for k8s as no one will call it on k8s pod.
-      String generatedScriptPath = generateCollectMetricsScript(universe.universeUUID, nodeInfo);
+      String generatedScriptPath =
+          generateCollectMetricsScript(universe.getUniverseUUID(), nodeInfo);
 
       String scriptPath = nodeInfo.getYbHomeDir() + "/bin/collect_metrics.sh";
-      nodeUniverseManager
-          .uploadFileToNode(
-              nodeInfo.nodeDetails,
-              universe,
-              generatedScriptPath,
-              scriptPath,
-              SCRIPT_PERMISSIONS,
-              context)
-          .processErrors();
+      nodeUniverseManager.uploadFileToNode(
+          nodeInfo.nodeDetails,
+          universe,
+          generatedScriptPath,
+          scriptPath,
+          SCRIPT_PERMISSIONS,
+          context);
     }
 
     String scriptPath =
-        (nodeInfo.isK8s() ? K8S_NODE_YW_DATA_DIR : nodeInfo.getYbHomeDir()) + "/bin/node_health.py";
+        Paths.get(
+                (nodeInfo.isK8s()
+                    ? KubernetesTaskBase.K8S_NODE_YW_DATA_DIR
+                    : nodeInfo.getYbHomeDir()),
+                "/bin/node_health.py")
+            .toString();
     if (uploadedInfo == null || !uploadedInfo.equals(nodeInfo)) {
       log.info("Uploading health check script to node {}", nodeInfo.getNodeName());
-      String generatedScriptPath = generateNodeCheckScript(universe.universeUUID, nodeInfo);
+      String generatedScriptPath = generateNodeCheckScript(universe.getUniverseUUID(), nodeInfo);
 
-      nodeUniverseManager
-          .uploadFileToNode(
-              nodeInfo.nodeDetails,
-              universe,
-              generatedScriptPath,
-              scriptPath,
-              SCRIPT_PERMISSIONS,
-              context)
-          .processErrors();
+      nodeUniverseManager.uploadFileToNode(
+          nodeInfo.nodeDetails,
+          universe,
+          generatedScriptPath,
+          scriptPath,
+          SCRIPT_PERMISSIONS,
+          context);
     }
     uploadedNodeInfo.put(nodeKey, nodeInfo);
 
+    List<String> commandToRun = new ArrayList<>();
+    commandToRun.add(scriptPath);
+    if (nodeCheckContext.ddlAtomicityCheck) {
+      commandToRun.add("--ddl_atomicity_check=true");
+      commandToRun.add("--master_leader_url=" + nodeCheckContext.getMasterLeaderUrl());
+    }
     ShellResponse response =
         nodeUniverseManager
-            .runCommand(nodeInfo.getNodeDetails(), universe, scriptPath, context)
+            .runCommand(nodeInfo.getNodeDetails(), universe, commandToRun, context)
             .processErrors();
 
     return Json.fromJson(Json.parse(response.extractRunCommandOutput()), Details.class);
@@ -944,9 +1180,9 @@ public class HealthChecker {
       // For now it has no universe/cluster specific info. Add placeholder substitution here once
       // they are added.
       Path path =
-          Paths.get("/tmp/collect_metrics_" + universeUuid + "_" + nodeInfo.nodeName + ".sh");
-
-      Files.write(path, scriptContent.getBytes(StandardCharsets.UTF_8));
+          fileHelperService.createTempFile(
+              "collect_metrics_" + universeUuid + "_" + nodeInfo.nodeUuid, ".sh");
+      Files.writeString(path, scriptContent);
 
       return path.toString();
     } catch (IOException e) {
@@ -959,12 +1195,16 @@ public class HealthChecker {
     try (InputStream templateStream =
         environment.resourceAsStream("health/node_health.py.template")) {
       template = IOUtils.toString(templateStream, StandardCharsets.UTF_8);
+      Universe universe = Universe.getOrBadRequest(universeUuid);
+      String customTmpDirectory = GFlagsUtil.getCustomTmpDirectory(nodeInfo.nodeDetails, universe);
       String scriptContent = template.replace("{{NODE_INFO}}", Json.toJson(nodeInfo).toString());
+      scriptContent = scriptContent.replace("{{TMP_DIR}}", customTmpDirectory);
       // For now it has no universe/cluster specific info. Add placeholder substitution here once
       // they are added.
-      Path path = Paths.get("/tmp/node_health_" + universeUuid + "_" + nodeInfo.nodeName + ".py");
-
-      Files.write(path, scriptContent.getBytes(StandardCharsets.UTF_8));
+      Path path =
+          fileHelperService.createTempFile(
+              "node_health_" + universeUuid + "_" + nodeInfo.nodeUuid, ".py");
+      Files.writeString(path, scriptContent);
 
       return path.toString();
     } catch (IOException e) {
@@ -975,11 +1215,9 @@ public class HealthChecker {
   private MetricFilter metricSourceKeysFilterWithHealthScriptMetrics(
       Customer customer, Universe universe, List<PlatformMetrics> metrics) {
     Set<String> allMetricNames = new HashSet<>(healthScriptMetrics);
-    allMetricNames.addAll(
-        metrics.stream().map(PlatformMetrics::getMetricName).collect(Collectors.toList()));
+    allMetricNames.addAll(metrics.stream().map(PlatformMetrics::getMetricName).toList());
     List<MetricSourceKey> metricSourceKeys =
-        allMetricNames
-            .stream()
+        allMetricNames.stream()
             .map(
                 metricName ->
                     MetricSourceKey.builder()
@@ -987,7 +1225,7 @@ public class HealthChecker {
                         .name(metricName)
                         .sourceUuid(universe.getUniverseUUID())
                         .build())
-            .collect(Collectors.toList());
+            .toList();
     return MetricFilter.builder().sourceKeys(metricSourceKeys).build();
   }
 
@@ -1003,8 +1241,9 @@ public class HealthChecker {
       return false;
     }
 
-    if (isUniverseBusyByTask(universeDetails)) {
-      log.warn("Cancelling universe " + u.get().name + " health-check, some task is in progress.");
+    if (universeDetails.isUniverseBusyByTask()) {
+      log.warn(
+          "Cancelling universe " + u.get().getName() + " health-check, some task is in progress.");
       return false;
     }
     return true;
@@ -1017,41 +1256,63 @@ public class HealthChecker {
     private int tserverIndex = -1;
     private boolean isK8s = false;
     private String ybHomeDir;
+    private String ybcDir = "";
     private String nodeHost;
     private String nodeName;
+    private UUID nodeUuid;
+    private String nodeIdentifier = "";
     private String ybSoftwareVersion = null;
     private boolean enableTls = false;
     private boolean enableTlsClient = false;
     private boolean rootAndClientRootCASame = true;
     private String sslProtocol = "";
     private boolean enableYSQL = false;
+    private boolean enableConnectionPooling = false;
     private boolean enableYCQL = false;
     private boolean enableYSQLAuth = false;
     private int ysqlPort = 5433;
+    private int internalYsqlPort = 6433;
     private int ycqlPort = 9042;
     private boolean enableYEDIS = false;
     private int redisPort = 6379;
     private int masterHttpPort = 7000;
     private int tserverHttpPort = 9000;
+    private int masterRpcPort = 7100;
+    private int tserverRpcPort = 9100;
     private int ysqlServerHttpPort = 13000;
+
+    // Clock and drift check values will get overridden.
     private boolean checkClock = false;
+    private boolean checkTimeDrift = true;
+    private int timeDriftWrnThreshold = 200;
+    private int timeDriftErrThreshold = 400;
+
     private Long nodeStartTime = null;
     private boolean testReadWrite = true;
+    private boolean testYsqlshConnectivity = true;
+    private boolean testCqlshConnectivity = true;
     private boolean enableYbc = false;
     private int ybcPort = 18018;
     private UUID universeUuid;
+    private boolean otelCollectorEnabled;
+    private boolean clockSyncServiceRequired = true;
     @JsonIgnore @EqualsAndHashCode.Exclude private NodeDetails nodeDetails;
+  }
+
+  @Data
+  @Accessors(chain = true)
+  private static class NodeCheckContext {
+    private boolean logOutput;
+    private int timeoutSec;
+    private boolean ddlAtomicityCheck;
+    private String masterLeaderUrl;
   }
 
   private Details removeMetricOnlyChecks(Details details) {
     List<NodeData> nodeReports =
-        details
-            .getData()
-            .stream()
-            .filter(data -> !data.getMetricsOnly())
-            .collect(Collectors.toList());
+        details.getData().stream().filter(data -> !data.getMetricsOnly()).toList();
     return new Details()
-        .setTimestamp(details.getTimestamp())
+        .setTimestampIso(details.getTimestampIso())
         .setYbVersion(details.getYbVersion())
         .setData(nodeReports)
         .setHasError(nodeReports.stream().anyMatch(NodeData::getHasError))
